# goFishMultiplayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  NETWORK.md  README.md  Vagrantfile  run-full-clang-tidy.sh
cmake/: cppcheck.cmake  docs.cmake
config/: server.json
config/tests/invalid/: debug.json  game.json  invalidJSON.json  logging.json  network.json  playerDefault.json
config/tests/valid/: debug.json  game.json  network.json  playerDefault.json
docs/: annotated.html  classCard.html  classDeck-members.html  classDeck.html  classLogger-members.html  classLogger.html  classPlayer-members.html  classPlayer.html  classServerConfig-members.html  classServerConfig.html  classTable-members.html  classTable.html  classes.html  deck_8hpp_source.html  dir_20706930dc76f634e133f76dc3cfb728.html  dir_20706930dc76f634e133f76dc3cfb728_dep.map  dir_20706930dc76f634e133f76dc3cfb728_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_80b2bdf578a5290e4aa877db1f8440ce_dep.map  dir_975424cdae97a07db69e55371758444e.html  dir_975424cdae97a07db69e55371758444e_dep.map  dir_975424cdae97a07db69e55371758444e_dep.md5  dir_aadec66ccdcd7da91dace2e07220b14d.html  dir_aadec66ccdcd7da91dace2e07220b14d_dep.md5  dir_ffde1fbcaa8d6b0d34e29c3bddf7a801.html  dir_ffde1fbcaa8d6b0d34e29c3bddf7a801_dep.md5  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  index.html  logger_8hpp_source.html  md_NETWORK.html  menudata.js  pages.html  player_8hpp_source.html  serverConfig_8hpp_source.html  structTableMessage-members.html  structTableMessage.html  (+1 more)
docs/html/: annotated.html  card_8hpp_source.html  classCard-members.html  classCard.html  classConfig-members.html  classConfig.html  classDeck-members.html  classDeck.html  classPlayer-members.html  classPlayer.html  classServerConfig-members.html  classServerConfig.html  classes.html  classplayer-members.html  classplayer.html  config_8hpp_source.html  deck_8hpp_source.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_120ed4da3e3217b1e7fc0b4f48568e79_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7e83d1792d529f4aa7126ac7e0b3b699.html  dir_80b2bdf578a5290e4aa877db1f8440ce.html  dir_80b2bdf578a5290e4aa877db1f8440ce_dep.md5  dir_aadec66ccdcd7da91dace2e07220b14d_dep.map  files.html  functions.html  functions_func.html  graph_legend.html  index.html  menudata.js  player_8hpp_source.html  serverConfig_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  classes_0.js  (+7 more)
docs/search/: all_1.js  all_3.js  all_4.js  all_6.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  pages_1.js  related_0.js  related_1.js  searchdata.js  variables_0.js  variables_1.js
src/: CMakeLists.txt  main.cpp
src/card/: CMakeLists.txt  card.cpp  card.hpp
src/config/: CMakeLists.txt  config.cpp  config.h  config.hpp  serverConfig.cpp  serverConfig.hpp
src/deck/: CMakeLists.txt  deck.cpp  deck.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/player/: CMakeLists.txt  player.cpp  player.hpp
src/table/: CMakeLists.txt  table.cpp  table.hpp
src/test/: CMakeLists.txt  card-test.cpp  deck-test.cpp  logger-test.cpp  player-test.cpp  serverConfig-test.cpp  table-test.cpp
